--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "@linagora/char-api": "0.1.1",
+    "@linagora/grunt-swagger-checker": "github:linagora/grunt-swagger-checker",
     "@linagora/i18n-node": "0.9.1",
     "@linagora/ical.js": "1.2.4",
     "@linagora/passport-http": "0.4.0",
@@ -56,11 +57,11 @@
     "ldapts": "2.2.1",
     "less": "2.7.1",
     "less-middleware": "2.2.0",
-    "linagora.esn.calendar": "linagora/linagora.esn.calendar",
+    "linagora.esn.calendar": "github:linagora/linagora.esn.calendar",
     "linagora.esn.dav.import": "github:linagora/linagora.esn.dav.import",
-    "linagora.esn.lemonldap": "linagora/linagora.esn.lemonldap",
-    "linagora.esn.oidc": "linagora/linagora.esn.oidc",
-    "linagora.esn.sync": "linagora/linagora.esn.sync",
+    "linagora.esn.lemonldap": "github:linagora/linagora.esn.lemonldap",
+    "linagora.esn.oidc": "github:linagora/linagora.esn.oidc",
+    "linagora.esn.sync": "github:linagora/linagora.esn.sync",
     "lodash": "4.17.15",
     "logrotate-stream": "0.2.5",
     "mailparser": "0.6.1",
@@ -103,7 +104,6 @@
     "@linagora/grunt-i18n-checker": "2.0.5",
     "@linagora/grunt-lint-pattern": "0.1.4",
     "@linagora/grunt-run-grunt": "0.1.4",
-    "grunt-swagger-checker": "linagora/grunt-swagger-checker",
     "@linagora/i18n-checker": "2.0.3",
     "@linagora/karma-ng-jade2module-preprocessor": "0.5.3",
     "chai": "3.5.0",
@@ -113,7 +113,7 @@
     "chai-shallow-deep-equal": "1.4.6",
     "cookie": "0.3.1",
     "cucumber": "1.3.1",
-    "dockerode": "linagora/dockerode#12ff3e46f0bac834b7411a6cf0344c0c079208f9",
+    "dockerode": "github:linagora/dockerode#12ff3e46f0bac834b7411a6cf0344c0c079208f9",
     "eslint": "6.3.0",
     "eslint-plugin-import": "2.18.2",
     "find-port": "2.0.1",
@@ -124,7 +124,7 @@
     "grunt-contrib-concat": "1.0.1",
     "grunt-contrib-uglify": "2.0.0",
     "grunt-contrib-watch": "1.1.0",
-    "grunt-docker-spawn": "linagora/grunt-docker-spawn#54baa8a9d3fd19944bf90a9cac558cbdee1fae4b",
+    "grunt-docker-spawn": "github:linagora/grunt-docker-spawn#54baa8a9d3fd19944bf90a9cac558cbdee1fae4b",
     "grunt-eslint": "19.0.0",
     "grunt-karma": "3.0.2",
     "grunt-mocha-cli": "4.0.0",
@@ -134,7 +134,8 @@
     "grunt-run": "0.8.1",
     "grunt-shell": "2.1.0",
     "grunt-shell-spawn": "0.4.0",
-    "grunt-swagger-generate": "linagora/grunt-swagger-generate#d756f1a6c51897ddf94de8c2391bfcb14b7ca061",
+    "grunt-swagger-checker": "linagora/grunt-swagger-checker",
+    "grunt-swagger-generate": "github:linagora/grunt-swagger-generate#d756f1a6c51897ddf94de8c2391bfcb14b7ca061",
     "grunt-wait-server": "0.3.1",
     "karma": "4.2.0",
     "karma-chrome-launcher": "2.2.0",
@@ -144,7 +145,7 @@
     "karma-html2js-preprocessor": "1.1.0",
     "karma-mocha": "1.3.0",
     "karma-phantomjs-launcher": "1.0.4",
-    "karma-rawfixtures-preprocessor": "linagora/karma-rawfixtures-preprocessor",
+    "karma-rawfixtures-preprocessor": "github:linagora/karma-rawfixtures-preprocessor",
     "karma-requirejs": "1.1.0",
     "karma-script-launcher": "1.0.0",
     "karma-spec-reporter": "0.0.32",
