🔒️ Npm audit fix

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "awesome-module-manager": "1.2.0",
     "axios": "0.19.2",
     "bcrypt-nodejs": "0.0.3",
-    "body-parser": "1.19.0",
+    "body-parser": "^1.20.2",
     "bson": "4.2.0",
     "busboy": "0.2.13",
     "chokidar": "3.0.2",
@@ -33,7 +33,7 @@
     "cookie-parser": "1.4.3",
     "cors": "2.8.1",
     "cron": "1.1.0",
-    "dotty": "0.0.2",
+    "dotty": "^0.1.2",
     "ejs": "2.6.1",
     "elasticsearch": "15.1.1",
     "email-addresses": "2.0.2",
@@ -41,12 +41,12 @@
     "escape-string-regexp": "1.0.5",
     "esn-elasticsearch-configuration": "0.17.0",
     "eventemitter2": "4.1.2",
-    "express": "4.16.3",
+    "express": "^4.18.3",
     "express-http-proxy": "0.10.0",
     "express-session": "1.15.6",
     "extend": "3.0.2",
     "fs-extra": "0.30.0",
-    "glob-all": "3.1.0",
+    "glob-all": "^3.3.1",
     "gm": "1.23.1",
     "gridfs-stream": "1.1.1",
     "hash_file": "0.1.1",
@@ -62,19 +62,19 @@
     "linagora.esn.lemonldap": "github:linagora/linagora.esn.lemonldap",
     "linagora.esn.oidc": "github:linagora/linagora.esn.oidc",
     "linagora.esn.sync": "github:linagora/linagora.esn.sync",
-    "lodash": "4.17.15",
-    "logrotate-stream": "0.2.5",
+    "lodash": "^4.17.21",
+    "logrotate-stream": "^0.2.9",
     "mailparser": "0.6.1",
-    "moment-timezone": "0.5.17",
+    "moment-timezone": "^0.5.45",
     "mongoconfig": "1.1.0",
-    "mongodb": "2.2.9",
+    "mongodb": "^4.2.0",
     "mongoose": "5.7.12",
     "morgan": "1.9.1",
     "ng-annotate": "1.2.1",
     "nodemailer": "2.6.0",
     "oauth2orize": "1.5.0",
     "openid-client": "4.1.1",
-    "passport": "0.3.2",
+    "passport": "^0.7.0",
     "passport-http-bearer": "1.0.1",
     "passport-ldapauth": "2.1.4",
     "passport-local": "1.0.0",
@@ -97,7 +97,7 @@
     "winston-daily-rotate-file": "3.5.1",
     "winston-elasticsearch": "0.7.5",
     "winston-transport": "4.2.0",
-    "xml2js": "0.4.17",
+    "xml2js": "^0.6.2",
     "yargs": "7.0.2"
   },
   "devDependencies": {
@@ -117,7 +117,7 @@
     "eslint": "6.3.0",
     "eslint-plugin-import": "2.18.2",
     "find-port": "2.0.1",
-    "grunt": "1.0.4",
+    "grunt": "^1.6.1",
     "grunt-config": "1.0.0",
     "grunt-continue": "0.1.0",
     "grunt-contrib-clean": "1.0.0",
