--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "main": "index.js",
   "dependencies": {
     "@linagora/char-api": "0.1.1",
-    "@linagora/grunt-swagger-checker": "github:linagora/grunt-swagger-checker",
     "@linagora/i18n-node": "0.9.1",
     "@linagora/ical.js": "1.2.4",
     "@linagora/passport-http": "0.4.0",
@@ -19,9 +18,10 @@
     "awesome-module-manager": "1.2.0",
     "axios": "0.19.2",
     "bcrypt-nodejs": "0.0.3",
-    "body-parser": "^1.20.2",
+    "body-parser": "1.19.0",
     "bson": "4.2.0",
     "busboy": "0.2.13",
+    "canvas": "2.6.1",
     "chokidar": "3.0.2",
     "circular-json": "0.5.1",
     "cli-table": "0.3.1",
@@ -33,7 +33,7 @@
     "cookie-parser": "1.4.3",
     "cors": "2.8.1",
     "cron": "1.1.0",
-    "dotty": "^0.1.2",
+    "dotty": "0.0.2",
     "ejs": "2.6.1",
     "elasticsearch": "15.1.1",
     "email-addresses": "2.0.2",
@@ -41,12 +41,12 @@
     "escape-string-regexp": "1.0.5",
     "esn-elasticsearch-configuration": "0.17.0",
     "eventemitter2": "4.1.2",
-    "express": "^4.18.3",
+    "express": "4.16.3",
     "express-http-proxy": "0.10.0",
     "express-session": "1.15.6",
     "extend": "3.0.2",
     "fs-extra": "0.30.0",
-    "glob-all": "^3.3.1",
+    "glob-all": "3.1.0",
     "gm": "1.23.1",
     "gridfs-stream": "1.1.1",
     "hash_file": "0.1.1",
@@ -57,33 +57,24 @@
     "ldapts": "2.2.1",
     "less": "2.7.1",
     "less-middleware": "2.2.0",
-    "linagora.esn.calendar": "github:linagora/linagora.esn.calendar",
-    "linagora.esn.dav.import": "github:linagora/linagora.esn.dav.import",
-    "linagora.esn.lemonldap": "github:linagora/linagora.esn.lemonldap",
-    "linagora.esn.oidc": "github:linagora/linagora.esn.oidc",
-    "linagora.esn.sync": "github:linagora/linagora.esn.sync",
-    "lodash": "^4.17.21",
-    "logrotate-stream": "^0.2.9",
+    "lodash": "4.17.15",
+    "logrotate-stream": "0.2.5",
     "mailparser": "0.6.1",
-    "moment-timezone": "^0.5.45",
+    "moment-timezone": "0.5.17",
     "mongoconfig": "1.1.0",
-    "mongodb": "^4.2.0",
+    "mongodb": "2.2.9",
     "mongoose": "5.7.12",
     "morgan": "1.9.1",
     "ng-annotate": "1.2.1",
     "nodemailer": "2.6.0",
     "oauth2orize": "1.5.0",
     "openid-client": "4.1.1",
-    "passport": "^0.7.0",
-    "passport-http-bearer": "1.0.1",
-    "passport-ldapauth": "2.1.4",
-    "passport-local": "1.0.0",
-    "passport-oauth2-client-password": "0.1.2",
-    "passport-oauth2-refresh": "1.0.0",
+    "passport": "0.3.2",
     "path-is-absolute": "1.0.0",
     "pug": "2.0.3",
     "q": "1.5.1",
     "randomstring": "1.1.5",
+    "recaptcha": "1.2.1",
     "redis": "2.6.2",
     "request": "2.88.0",
     "socket.io": "2.2.0",
@@ -94,16 +85,18 @@
     "uuid": "3.1.0",
     "valid-url": "1.0.9",
     "winston": "3.1.0",
+    "winston-compat": "0.1.4",
     "winston-daily-rotate-file": "3.5.1",
     "winston-elasticsearch": "0.7.5",
     "winston-transport": "4.2.0",
-    "xml2js": "^0.6.2",
+    "xml2js": "0.4.17",
     "yargs": "7.0.2"
   },
   "devDependencies": {
     "@linagora/grunt-i18n-checker": "2.0.5",
     "@linagora/grunt-lint-pattern": "0.1.4",
     "@linagora/grunt-run-grunt": "0.1.4",
+    "grunt-swagger-checker": "linagora/grunt-swagger-checker",
     "@linagora/i18n-checker": "2.0.3",
     "@linagora/karma-ng-jade2module-preprocessor": "0.5.3",
     "chai": "3.5.0",
@@ -113,18 +106,19 @@
     "chai-shallow-deep-equal": "1.4.6",
     "cookie": "0.3.1",
     "cucumber": "1.3.1",
-    "dockerode": "github:linagora/dockerode#12ff3e46f0bac834b7411a6cf0344c0c079208f9",
+    "dockerode": "linagora/dockerode#12ff3e46f0bac834b7411a6cf0344c0c079208f9",
     "eslint": "6.3.0",
+    "eslint-config-airbnb-base": "8.0.0",
     "eslint-plugin-import": "2.18.2",
     "find-port": "2.0.1",
-    "grunt": "^1.6.1",
+    "grunt": "1.0.4",
     "grunt-config": "1.0.0",
     "grunt-continue": "0.1.0",
     "grunt-contrib-clean": "1.0.0",
     "grunt-contrib-concat": "1.0.1",
     "grunt-contrib-uglify": "2.0.0",
     "grunt-contrib-watch": "1.1.0",
-    "grunt-docker-spawn": "github:linagora/grunt-docker-spawn#54baa8a9d3fd19944bf90a9cac558cbdee1fae4b",
+    "grunt-docker-spawn": "linagora/grunt-docker-spawn#54baa8a9d3fd19944bf90a9cac558cbdee1fae4b",
     "grunt-eslint": "19.0.0",
     "grunt-karma": "3.0.2",
     "grunt-mocha-cli": "4.0.0",
@@ -134,8 +128,7 @@
     "grunt-run": "0.8.1",
     "grunt-shell": "2.1.0",
     "grunt-shell-spawn": "0.4.0",
-    "grunt-swagger-checker": "linagora/grunt-swagger-checker",
-    "grunt-swagger-generate": "github:linagora/grunt-swagger-generate#d756f1a6c51897ddf94de8c2391bfcb14b7ca061",
+    "grunt-swagger-generate": "linagora/grunt-swagger-generate#d756f1a6c51897ddf94de8c2391bfcb14b7ca061",
     "grunt-wait-server": "0.3.1",
     "karma": "4.2.0",
     "karma-chrome-launcher": "2.2.0",
@@ -145,7 +138,7 @@
     "karma-html2js-preprocessor": "1.1.0",
     "karma-mocha": "1.3.0",
     "karma-phantomjs-launcher": "1.0.4",
-    "karma-rawfixtures-preprocessor": "github:linagora/karma-rawfixtures-preprocessor",
+    "karma-rawfixtures-preprocessor": "linagora/karma-rawfixtures-preprocessor",
     "karma-requirejs": "1.1.0",
     "karma-script-launcher": "1.0.0",
     "karma-spec-reporter": "0.0.32",
@@ -165,7 +158,8 @@
     "sinon": "1.17.5",
     "sinon-chai": "2.8.0",
     "supertest": "2.0.0",
-    "swagger-jsdoc": "1.6.0"
+    "swagger-jsdoc": "1.6.0",
+    "time-grunt": "1.4.0"
   },
   "scripts": {
     "test": "grunt test"
