--- a/package.json
+++ b/package.json
@@ -70,6 +70,9 @@
     "oauth2orize": "1.5.0",
     "openid-client": "4.1.1",
     "passport": "0.3.2",
+    "passport-http-bearer": "^1.0.1",
+    "passport-local": "^1.0.0",
+    "passport-oauth2-client-password": "^0.1.2",
     "path-is-absolute": "1.0.0",
     "pug": "2.0.3",
     "q": "1.5.1",
@@ -90,7 +93,9 @@
     "winston-elasticsearch": "0.7.5",
     "winston-transport": "4.2.0",
     "xml2js": "0.4.17",
-    "yargs": "7.0.2"
+    "yargs": "7.0.2",
+    "mjml": "4.8.1",
+    "short-uuid": "4.1.0"
   },
   "devDependencies": {
     "@linagora/grunt-i18n-checker": "2.0.5",
@@ -159,7 +164,20 @@
     "sinon-chai": "2.8.0",
     "supertest": "2.0.0",
     "swagger-jsdoc": "1.6.0",
-    "time-grunt": "1.4.0"
+    "time-grunt": "1.4.0",
+    "body-parser": "1.19.0",
+    "chance": "1.0.10",
+    "esn-calendar-client": "linagora/esn-calendar-client",
+    "esn-elasticsearch-configuration": "0.12.0",
+    "fs-extra": "0.30.0",
+    "grunt-contrib-jshint": "2.1.0",
+    "grunt-release": "0.14.0",
+    "i18n": "0.8.3",
+    "mongodb": "2.2.31",
+    "ora": "1.3.0",
+    "recaptcha": "1.2.1",
+    "superagent": "5.1.0",
+    "yargs": "7.0.2"
   },
   "scripts": {
     "test": "grunt test"
